@@ -1,17 +1,23 @@
 package application;
+	
+import java.io.IOException;
+import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.List;
 
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
+import javafx.stage.Stage;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.stage.Stage;
+import javafx.scene.layout.BorderPane;
+import application.csvhandler.*;
+
 
 public class Main extends Application {
-
-	
-    @Override
-    public void start(Stage primaryStage) {
-        try {
+	@Override
+	public void start(Stage primaryStage) {
+		try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/application/User/UserUI/Login.fxml"));
             Parent root = loader.load();
 
@@ -31,9 +37,9 @@ public class Main extends Application {
 //        primaryStage.setTitle("Monthly Calendar");
 //        primaryStage.show();
 //    }
-
-    public static void main(String[] args) {
-        launch(args);
-    }
+	
+	
+	public static void main(String[] args) {
+		launch(args);
+	}
 }
-//(--add-modules javafx.controls,javafx.fxml) run as configs
